# RustyBoy

./: .gitignore  Cargo.toml  Changelog.md  README.md  b.txt  instructions.csv  poke_before_crash.json  portaudio.lib  rustfmt.toml
.github/actions/test/: action.yml
.github/workflows/: dev.yml  latest.yml  master.yml  rust.yml
docs/: OTHER_LICENSES.txt  test_details.md
gb_disas/: Cargo.toml
gb_disas/src/: decode.rs  display.rs  lib.rs  op_creation.rs
soc/: Cargo.toml  instructions.csv
soc/src/: cart.rs  cpu.rs  dma.rs  error.rs  gpu.rs  gpu.rs.orig  io_registers.rs  joypad.rs  lib.rs  log.rs  mmu.rs  serial.rs  sim.rs  system.rs  timer.rs  util.rs
soc/src/apu/: channels.rs  components.rs  device.rs  mixer.rs  mod.rs  registers.rs  sound.rs  square.rs  threads.rs
soc/src/cart/: mbc1.rs  mbc3.rs
soc/src/cpu/: alu.rs  control_unit.rs  decoder.rs  micro_code.rs  register.rs
soc/src/cpu/asm/: compiler.rs  csv_loader.rs  mod.rs  op_map.rs  parser.rs
soc/src/cpu/micro_code/: Cargo.toml
soc/src/cpu/micro_code/src/: asm.rs  compiler.rs  csv_loader.rs  lib.rs  micro_code.rs  op_map.rs  parser.rs  pla.rs  register.rs
soc/src/cpu/micro_code_gen/: Cargo.toml  build.rs  buildha.rs
soc/src/cpu/micro_code_gen/src/: lib.rs
soc/src/cpu/test/: mod.rs  test_8bit_alu.rs  test_cb_alu.rs  test_dma.rs  test_flow.rs  test_interrupts.rs  test_load.rs  test_push_pop.rs  test_timer.rs
soc/src/gpu/: fetcher.rs  fifo.rs  options.rs  registers.rs  sprites.rs  state_machine.rs
soc/src/gpu/test/: mod.rs  test_bg.rs  test_sprites.rs  test_timing.rs  test_window.rs
soc/src/test/: automated_solver.rs  context.rs  image.rs  integration.rs  mod.rs  mooneye_suite.rs  util.rs
src/: alu.rs  cart.rs  cpu.rs  cpu_old.rs  debug.rs  dma.rs  error.rs  gpu.rs  gpu_old.rs  graphics.rs  io_registers.rs  lib.rs  main.rs  memory.rs  mmu.rs  registers.rs  serial.rs  sim.rs  system.rs  timer.rs  util.rs  window.rs
src/cart/: mbc1.rs
src/cpu/: alu.rs  autodecoder.rs  control_unit.rs  cpu_rewrite.rs  decoder.rs  instruction_display.rs  instructions.rs  micro_code.rs  mod.rs  register.rs
src/cpu/asm/: compiler.rs  csv_loader.rs  mod.rs  op_map.rs  parser.rs
src/cpu/autodecoder/: asm.rs  asm_compiler.rs  asm_parser.rs  control_unit.rs  csv_parser.rs  decoder.rs  hl_decoder.rs  loader.rs  micro_code.rs  op_map.rs
src/cpu/decoder/: builder.rs  x_0_opcodes.rs  x_3_opcodes.rs
src/cpu/test/: mod.rs  test_16bit_alu.rs  test_8bit_alu.rs  test_alu.rs  test_autodecoder.rs  test_cb_alu.rs  test_dma.rs  test_flow.rs  test_instructions.rs  test_interrupts.rs  test_load.rs  test_push_pop.rs  test_store.rs  test_timer.rs
src/debug/: mod.rs
src/gpu/: fetcher.rs  fifo.rs  registers.rs  sprites.rs
src/gpu/test/: mod.rs  test_bg.rs  test_sprites.rs
src/test/: image.rs  mod.rs  mooneye_suite.rs
src/tests/: mod.rs  mooneye_suite.rs
test_roms/: LICENSE
test_roms/acceptance/bits/: mem_oam.sym  reg_f.sym  unused_hwio-GS.sym
test_roms/acceptance/instr/: daa.sym
test_roms/acceptance/interrupts/: ie_push.sym
test_roms/acceptance/oam_dma/: basic.sym  reg_read.sym  sources-dmgABCmgbS.sym
test_roms/acceptance/ppu/: hblank_ly_scx_timing-GS.sym  intr_1_2_timing-GS.sym  intr_2_0_timing.sym  intr_2_mode0_timing.sym  intr_2_mode0_timing_sprites.sym  intr_2_mode3_timing.sym  intr_2_oam_ok_timing.sym  lcdon_timing-dmgABCmgbS.sym  lcdon_write_timing-GS.sym  stat_irq_blocking.sym  stat_lyc_onoff.sym  vblank_stat_intr-GS.sym
test_roms/acceptance/serial/: boot_sclk_align-dmgABCmgb.sym
test_roms/acceptance/timer/: div_write.sym  rapid_toggle.sym  tim00.sym  tim00_div_trigger.sym  tim01.sym  tim01_div_trigger.sym  tim10.sym  tim10_div_trigger.sym  tim11.sym  tim11_div_trigger.sym  tima_reload.sym  tima_write_reloading.sym  tma_write_reloading.sym
test_roms/emulator-only/mbc1/: bits_ram_en.sym  multicart_rom_8Mb.sym  ram_256Kb.sym  ram_64Kb.sym  rom_16Mb.sym  rom_1Mb.sym  rom_2Mb.sym  rom_4Mb.sym  rom_512Kb.sym  rom_8Mb.sym
test_roms/wilbert/: hblank_ly_scx_timing-C.gb  hblank_ly_scx_timing-C.s  hblank_ly_scx_timing-GS.gb  hblank_ly_scx_timing_nops.gb  hblank_ly_scx_timing_nops.s  hblank_ly_scx_timing_variant_nops.gb  hblank_ly_scx_timing_variant_nops.s  intr_0_timing.s  intr_1_2_timing-GS.gb  intr_1_timing.s  intr_2_0_timing.gb  intr_2_mode0_scx1_timing_nops.gb  intr_2_mode0_scx1_timing_nops.s  intr_2_mode0_scx2_timing_nops.gb  intr_2_mode0_scx2_timing_nops.s  intr_2_mode0_scx3_timing_nops.gb  intr_2_mode0_scx3_timing_nops.s  intr_2_mode0_scx4_timing_nops.gb  intr_2_mode0_scx4_timing_nops.s  intr_2_mode0_scx5_timing_nops.gb  intr_2_mode0_scx5_timing_nops.s  intr_2_mode0_scx6_timing_nops.gb  intr_2_mode0_scx6_timing_nops.s  intr_2_mode0_scx7_timing_nops.gb  intr_2_mode0_scx7_timing_nops.s  intr_2_mode0_scx8_timing_nops.gb  intr_2_mode0_scx8_timing_nops.s  intr_2_mode0_timing.gb  intr_2_mode0_timing_sprites.gb  intr_2_mode0_timing_sprites_nops.gb  intr_2_mode0_timing_sprites_nops.s  intr_2_mode0_timing_sprites_scx1_nops.gb  intr_2_mode0_timing_sprites_scx1_nops.s  intr_2_mode0_timing_sprites_scx2_nops.gb  intr_2_mode0_timing_sprites_scx2_nops.s  intr_2_mode0_timing_sprites_scx3_nops.gb  intr_2_mode0_timing_sprites_scx3_nops.s  intr_2_mode0_timing_sprites_scx4_nops.gb  intr_2_mode0_timing_sprites_scx4_nops.s  intr_2_mode3_timing.gb  (+36 more)
tests/: cart_test.rs  mooneye_wilbert.rs
web_demo/: index.html  web_demo.js
