[workspace]
members = [
    "gb_disas",
    "soc"
]

[package]
name = "rusty_boy"
version = "1.1.0"
authors = ["Ramy"]
edition = "2018"

[features]
default = []
serialize = ["soc/serialize", "bincode"]

[dependencies]
gl = "0.14.0"
glutin = "0.22.0-alpha5"
structopt = {version = "0.3.5", default-features = false}
# Workspace dependencies.
soc = { path = "soc" }
# Serialize dependencies.
bincode = { version = "1.2.1", optional = true }

# Since the system is unusable in debug, debug defaults to fairly optimized settings, but with
# options for faster building. If you want a true debug build, uncomment the section below.
[profile.dev]
opt-level = 3
debug = false
# Similar settings for test profile.
[profile.test]
opt-level = 3
debug = false

# Release settings are left for fully optimized builds.
[profile.release]
codegen-units = 1
lto = true
debug = true

# Keep overflow checks and debug assertions on for test --release.
[profile.bench]
overflow-checks = true
debug-assertions = true
incremental = true
