[workspace]
members = [
    "gb_disas",
    "soc"
]

[package]
name = "rusty_boy"
version = "1.1.0"
authors = ["Ramy"]
edition = "2018"

[features]
default = ["soc/audio"]
serialize = ["soc/serialize", "bincode"]

[dependencies]
gl = "0.14"
glutin = "0.22"
pico-args = "0.3"
# Workspace dependencies.
soc = { path = "soc" }
# Serialize dependencies.
bincode = { version = "~1.2", optional = true }

# Since the system is unusable in debug, debug defaults to fairly optimized settings, but with
# options for faster building. If you want a true debug build, uncomment the section below.
[profile.dev]
opt-level = 2
debug = false

# Similar settings for test profile.
[profile.test]
opt-level = 2

# Release settings are left for fully optimized builds.
[profile.release]
codegen-units = 1
lto = "fat"
debug = true

# Turn off optimization for build scripts, since release build script times are dominated
# by syn.
#[profile.release.build-override]
#opt-level = 0