[package]
name = "soc"
version = "0.6.0"
authors = ["Ramy"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Audio support. Disable this feature if you are having any audio problems (crashes, etc.).
audio = ["sample", "libsamplerate", "libsoundio-sys", "simple-error", "ringbuf", "slice-deque", "spin"]
disas = ["gb_disas"]
serialize = ["serde", "typetag", "serde_bytes"]
# Enable for strict asserts that check for conditions that, while valid, are considered "bad" (e.g.
# writing to RAM when RAM is disabled, etc..).
strict_assert = []
# Use to log unit tests to a format that is shared with FPGA test environment.
serialize_tests = []

[dependencies]
arrayvec = {version = "0.5"}
bitflags = "~1.2"
bitfield = "0.13"
fern = "0.5"
log = {version = "0.4", features = ["max_level_trace", "release_max_level_error"]}
more-asserts = "0.2"
num-derive = "0.3"
num-traits = {version = "0.2", default-features = false}

micro_code = { path = "./src/cpu/micro_code" }
micro_code_gen = { path = "./src/cpu/micro_code_gen" }
gb_disas = { path = "../gb_disas", optional = true}

# Serialize dependencies.
serde = {version = "~1.0", features = ["derive", "rc"], optional = true }
typetag = { version = "0.1", optional = true }
serde_bytes = { version = "0.11", optional = true }

# Audio dependencies.
sample = { version = "0.10", optional = true }
libsamplerate = {version = "0.1", optional = true }
libsoundio-sys = { git = "https://github.com/Timmmm/soundio-rs.git", rev = "8944aadd2fd722d609d2c115de1073d1a4b72f52", optional = true }
simple-error = { version = "0.2", optional = true }
ringbuf = { version = "0.2", optional = true }
slice-deque = { version = "0.3", optional = true }
spin = {version = "0.5", optional = true}

[dev-dependencies]
backtrace = "0.3"
bmp = "0.5"

# WASM dependencies.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
console_error_panic_hook = "*"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-g"]
